Remove Random from Survivor constructors